--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Sunil Syal",
   "dependencies": {
     "body-parser": "^1.15.0",
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "bestbuy": "1.0.0"
   }
 }
